# cuvis-ai-dinomaly

./: .gitignore  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/plugins/: cuvis_ai_dataloader.yaml
configs/training/: default.yaml
configs/trainrun/: dinomaly_multifile_cir.yaml  dinomaly_multifile_concrete.yaml  dinomaly_multifile_concrete_joint.yaml  dinomaly_multifile_concrete_selector.yaml  dinomaly_multifile_rgb.yaml  dinomaly_multifile_rgb_frozen_adaclip_bands.yaml
cuvis_ai_dinomaly/: __init__.py
cuvis_ai_dinomaly/data/: __init__.py  _coco_utils.py  multi_file_npz_dataset.py
cuvis_ai_dinomaly/node/: __init__.py  _patch_embed_inflation.py  _rectangular_input_patch.py  auroc_metrics.py  dinomaly_detector.py  dinomaly_train_loss_bridge.py  selectors.py
cuvis_ai_dinomaly/upstream/: README.md
docs/: compatibility_audit.md  publish_checklist.md
docs/proposals/: fast_inference_kwargs.md
examples/: dinomaly_multifile_train_common.py  dump_custom_dinomaly_rgb_input_png.py  export_dinomaly_multifile_pipeline_from_ckpt.py  export_dinomaly_npz_single_cu3s_all_frames.py  plugins.yaml  profile_saved_dinomaly_pipeline_cu3s.py  run_saved_dinomaly_pipeline_test_npz.py  train_dinomaly_cir_multifile.py  train_dinomaly_concrete_joint_multifile.py  train_dinomaly_concrete_multifile.py  train_dinomaly_concrete_selector_multifile.py  train_dinomaly_rgb_frozen_adaclip_bands_multifile.py  train_dinomaly_rgb_frozen_adaclip_bands_no_minmax_multifile.py  train_dinomaly_rgb_multifile.py
notebooks/bedding_anomaly/: HF_DATASET.md  HF_UPLOAD_TODO.md  bedding_all6_inference_tutorial.ipynb  bedding_all6_results_tutorial.ipynb  bedding_all6_train_tutorial.ipynb  utils.py
scripts/: bedding_train_channel_stats.py  convert_bedding_cu3s_to_npz.py  ead_make_mask_symlinks.sh
scripts/ead_baseline/: PATCHES.md  README.md  example_report_config.yaml  reporting.py
tests/: conftest.py  test_auroc_metrics.py  test_detector_forward.py  test_fast_inference.py  test_hyperspectral_selector.py  test_loss_bridge.py  test_node_contracts.py  test_npz_datamodule.py  test_package_exports.py  test_parity.py  test_parity_markers.py  test_patch_embed_inflation.py  test_plugin_manifest_loading.py  test_preprocess.py  test_rectangular_input.py
