[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvis-ai-dinomaly"
dynamic = ["version"]
description = "Dinomaly (Anomalib) as a cuvis.ai plugin node."
readme = "README.md"
# Cap at <3.12: anomalib==2.1.0 and kornia==0.6.12 are tested on 3.11 only;
# the kornia pin avoids kornia-rs (illegal instruction on CI runners).
# Loosen once anomalib >=2.2 ships 3.12-compatible wheels.
requires-python = ">=3.11,<3.12"
license = "Apache-2.0"
authors = [
    { name = "Cubert GmbH, Ulm, Germany", email = "cuvis.ai@cubert-gmbh.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
]
keywords = [
    "cuvis",
    "hyperspectral",
    "dinomaly",
    "anomaly-detection",
    "anomalib",
    "plugin",
    "cuvis-ai",
]
dependencies = [
    # Note: do NOT depend on the high-level `cuvis-ai` package — it transitively
    # eagerly imports the proprietary Cuvis SDK (cuvis_il sys.exit / native libs)
    # at module load. Plugins should target cuvis-ai-core + cuvis-ai-schemas
    # only, matching cuvis-ai-deepeiou / cuvis-ai-sam3.
    "cuvis-ai-core>=0.7.1",
    "cuvis-ai-schemas>=0.5.2",
    "anomalib==2.1.0",
    "kornia==0.6.12",
    "numpy>=1.20.0",
    "opencv-python-headless>=4.13.0.92",
    "tqdm>=4.66.0",
    "defusedxml>=0.7.1",
    "open-clip-torch>=2.24.0",
    # `requests` is an undeclared runtime dependency of anomalib 2.1.0:
    # importing `anomalib.models.image.dinomaly.torch_model` triggers
    # `anomalib.models.__init__` which eagerly loads the video chain
    # (`anomalib.models.video.ai_vad.clip.clip` -> `import requests`).
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pip-audit>=2.7.0",
    "detect-secrets>=1.4.0",
    "bandit[toml]>=1.7.5",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://www.cubert-hyperspectral.com/"
Repository = "https://github.com/cubert-hyperspectral/cuvis-ai-dinomaly"
Issues = "https://github.com/cubert-hyperspectral/cuvis-ai-dinomaly/issues"
Changelog = "https://github.com/cubert-hyperspectral/cuvis-ai-dinomaly/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["cuvis_ai_dinomaly*"]

[tool.uv.sources]
# Local editable overrides for internal development only.
# Release installs from Git tags / manifests resolve dependencies from normal indexes.
# NOTE: uv.lock is generated with --no-sources; CI uses --locked --no-sources.
# Local dev: uv sync (no --locked) uses these overrides.
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
cuvis-ai-core = { path = "../../cuvis-ai-core/cuvis-ai-core", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4"]
extend-select = ["ANN201", "ANN202", "ANN204"]
ignore = ["ANN401", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "ANN202", "ANN204"]
# Hydra entrypoints prepend examples/ to sys.path before importing the shared module.
"examples/train_dinomaly_*_multifile.py" = ["E402"]
"examples/train_dinomaly_cir_multifile_last_eval.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: downloads weights or heavy GPU",
    "integration: full stack",
]

[tool.coverage.run]
source = ["cuvis_ai_dinomaly"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "examples", ".venv"]
skips = ["B101"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.1.4"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests", "examples", "build", "dist"]
